<resources>
    <string name="app_name">QuickChat</string>
    <string name="splash_screen_image">App Icon</string>
    <string name="login_textview">Login</string>
    <string name="hint_login">Enter your email</string>
    <string name="password_textview">Password</string>
    <string name="hint_password">Enter your password</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="programmer_information">Name: Jackson Leite\nRA: 2040481812005</string>
    <string name="login_auth_sucess">Login sucessful!</string>
    <string name="login_auth_failure">Authentication failed!</string>
    <string name="hint_type_your_message">Type your message</string>
    <string name="app_icon_description">App Icon</string>
    <string name="pick_a_category_textview">Pick a Category</string>
    <string name="button_category_general">General</string>
    <string name="button_category_cinema">Cinema</string>
    <string name="button_category_news">News</string>
    <string name="button_category_technology">Technology</string>
    <string name="button_category_economy">Economy</string>
    <string name="button_category_sports">Sports</string>
    <string name="button_category_languages">Languages</string>
    <string name="date_name">In %s, %s says:</string>
    <string name="empty_field_warning">Make sure all fields are filled</string>
    <string name="registration_textview">Registration</string>
    <string name="name_text">Name</string>
    <string name="hint_name">Enter your name</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="hint_password_again">Confirm your password</string>
    <string name="button_confirm_registration">Confirm</string>
    <string name="registration_fail">Registration failed</string>
    <string name="different_passwords_warning">Make sure the passwords match</string>
    <string name="min_length_passwords_warning">Make sure the passwords is at least 8 characters long</string>
    <string name="registration_successful">Registration successful</string>
    <string name="registration_fail_userdata">Registration failed</string>
    <string name="my_profile_textview">My Profile</string>
    <string name="no_information_hint">No information</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="chat_button">Chat</string>
    <string name="userdata_loading_failure">Fail to load userdata</string>
    <string name="edit_profile_textview">Edit your profile</string>
    <string name="userdata_update_message">Your data have been updated!</string>
    <string name="delete_userdata_success">Userdata deleted successfully</string>
    <string name="delete_userdata_failure">Fail to delete userdata</string>
    <string name="account_delete_success">Your account has been deleted successfully</string>
    <string name="account_delete_failure">Fail on deleting your account</string>
    <string name="invalid_email_format_warning">Email not valid</string>
    <string name="forgot_password_textview">Forgot your password?</string>
    <string name="reset_password_message">An email with instructions will be sent to %s\nDo you want to continue?</string>
    <string name="reset_password_title_alert">Reset password</string>
    <string name="email_sent_warning">Email sent! Check your email inbox.</string>
    <string name="email_not_sent_warning">Fail to send email.\nPlease verify if you have an account on this app</string>
    <string name="general_category">General</string>
    <string name="cinema_category">Cinema</string>
    <string name="news_category">News</string>
    <string name="technology_category">Cinema</string>
    <string name="economy_category">Cinema</string>
    <string name="sports_category">Cinema</string>
    <string name="language_category">Cinema</string>
    <string name="welcome_message_chat">Welcome to</string>
</resources>
