<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context=".MenuCategoriesActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical">


        <ImageView
            android:id="@+id/appIconImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_icon_description"
            app:srcCompat="@drawable/app_icon_transparent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_layout_height" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pick_a_category_textview"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_layout_height" />

        <Button
            android:id="@+id/buttonCategoryGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToCategoryGeneral"
            android:text="@string/button_category_general" />

        <Button
            android:id="@+id/buttonCategoryCinema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E40909"
            android:onClick="goToCategoryCinema"
            android:text="@string/button_category_cinema" />

        <Button
            android:id="@+id/buttonCategoryNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#BF19C5"
            android:onClick="goToCategoryNews"
            android:text="@string/button_category_news" />

        <Button
            android:id="@+id/buttonCategoryTechnology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#504A4A"
            android:onClick="goToCategoryTechnology"
            android:text="@string/button_category_technology" />

        <Button
            android:id="@+id/buttonCategoryEconomy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#048713"
            android:onClick="goToCategoryEconomy"
            android:text="@string/button_category_economy" />

        <Button
            android:id="@+id/buttonCategorySports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1D649A"
            android:onClick="goToCategorySports"
            android:text="@string/button_category_sports" />

        <Button
            android:id="@+id/buttonCategoryLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#BFDF09"
            android:onClick="goToCategoryLanguages"
            android:text="@string/button_category_languages" />
    </LinearLayout>
</ScrollView>
