<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="0"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:text="@string/login_textview"
        android:textColor="@color/colorAccent"
        android:textSize="40sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        android:layout_weight="0.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_textview"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/loginEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/hint_login"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/password_textview"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        android:layout_weight="0" />

    <Button
        android:id="@+id/buttonLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="logIn"
        android:text="@string/button_login" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <Button
        android:id="@+id/buttonSignup"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="goToSignUp"
        android:text="@string/button_signup" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="end"
        android:text="@string/forgot_password_textview"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size"
        android:clickable="true"
        android:focusable="true"
        android:onClick="showView"/>

    <Space

        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        android:layout_weight="1.5"
        android:padding="15dp" />

</LinearLayout>