<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/registration_textview"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"
            android:layout_weight="1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/name_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/nameSignUpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/emailSignUpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/hint_login"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/password_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/passwordSignUpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/passwordTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/password_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/passwordSignUpEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/hint_password_again"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonConfirmRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="confirmRegistration"
            android:text="@string/button_confirm_registration" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"
            android:layout_weight="1" />

    </LinearLayout>
</ScrollView>