<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:orientation="vertical"
    tools:context=".ProfileActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls">


        <TextView
            android:id="@+id/myProfileTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/my_profile_textview"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_layout_height" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_information_hint"
            android:padding="@dimen/text_padding"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_information_hint"
            android:padding="@dimen/text_padding"
            android:textSize="@dimen/text_size" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_layout_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonChat"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:onClick="goToMenuCategories"
                android:text="@string/chat_button" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_layout_height" />

            <Button
                android:id="@+id/buttonEditProfile"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:onClick="goToEditProfile"
                android:text="@string/edit_profile_button" />

            <Space
                android:layout_width="@dimen/space_layout_width"
                android:layout_height="@dimen/space_layout_height" />

            <Button
                android:id="@+id/buttonSignout"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:onClick="signOut"
                android:text="@string/button_sign_out" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonDeleteAccount"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:onClick="deleteAccount"
                    android:text="@string/button_delete_account" />

                <Space
                    android:layout_width="34dp"
                    android:layout_height="11dp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>